fix: Add process/global polyfill in HTML for Node.js packages
Removed the broken Vite define approach and added a simple
inline script before the main bundle that defines:
- window.process with env.NODE_ENV
- window.global pointing to window

This ensures Node.js packages that check process.env work in browser.

--- a/apps/swipe-feed/index.html
+++ b/apps/swipe-feed/index.html
@@ -304,6 +304,11 @@
   <body>
     <a class="skip-to-content" href="#main" style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">Skip to content</a>
     <div id="root"></div>
+    <!-- Shim process.env for Node.js packages that run in browser -->
+    <script>
+      window.process = window.process || { env: { NODE_ENV: 'production' } };
+      window.global = window.global || window;
+    </script>
     <script type="module" src="/src/main.tsx"></script>
     
     <!-- Google Rich Results Test Helper -->
